# xCombat

./: CMakeLists.txt  HistoriaWynikow.cpp  HistoriaWynikow.h  KoniecGryWidok.qml  MenuWidok.qml  Pocisk.cpp  Pocisk.h  Pocisk.qml  Przeciwnik.cpp  Przeciwnik.h  Przeciwnik.qml  PrzeciwnikHelikopter.cpp  PrzeciwnikHelikopter.h  PrzeciwnikSamolotZygzak.cpp  PrzeciwnikSamolotZygzak.h  PrzeciwnikSzybki.cpp  PrzeciwnikSzybki.h  PrzeciwnikUFO.cpp  PrzeciwnikUFO.h  Przeciwnikdolny.cpp  Przeciwnikdolny.h  Przeciwnikduzy.cpp  Przeciwnikduzy.h  Przeciwnikszybki.cpp  Przeciwnikszybki.h  README.md  Sterowanie.cpp  Sterowanie.h  SterowanieWidok.qml  WynikiWidok.qml  main.cpp  main.qml  resources.qrc
images/: images.qrc
